product item title wraps correctly

--- a/src/components/productItem/ProductItem.css
+++ b/src/components/productItem/ProductItem.css
@@ -26,8 +26,13 @@
   gap: 10px;
 }
 .product__title {
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: pre-wrap;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   font-weight: 400;
   margin-bottom: 10px;
-  height: 80px;
   cursor: pointer;
+  text-overflow: ellipsis;
 }
